--- a/backend/cliente/src/main/resources/application.properties
+++ b/backend/cliente/src/main/resources/application.properties
@@ -7,3 +7,10 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
 spring.jpa.hibernate.ddl-auto=update
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+
+
+##SWAGGER (OPEN API)
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operationsSorter=method
+
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
